package de.dhbw.course1.model.personnel;

public interface Driver {

    String getName();
    void setName(String name);
}
