package de.dhbw.course1.model.train;

public class FreightWagon extends BaseWagon {
}
