package de.dhbw.course1.model.train;

public interface Wagon {

    int getOrder();
    void setOrder(int order);
}