package de.dhbw.experimental.trip;

public class RegionalTrain extends AbstractTrain {

    public RegionalTrain(String key) {
        super(key);
    }

}